# rts_engine

./: .gitignore  CMakeLists.txt  README.md
include/: engine.h  entity.h  input.h  render.h  texture.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
res/: ant.xcf  squirrel-test.svg.xcf  squirrel-test.xcf  sugar-cubes.xcf
src/: main.cpp
